--- a/package.json
+++ b/package.json
@@ -3,15 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@emotion/react": "^11.10.5",
-    "@emotion/styled": "^11.10.5",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "@hookform/resolvers": "^2.8.8",
-    "@mui/material": "^5.11.2",
+    "@mui/material": "^5.14.0",
+    "@mui/styled-engine-sc": "^5.12.0",
+    "@mui/x-date-pickers": "^6.9.2",
     "@reduxjs/toolkit": "^1.8.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.26.1",
+    "dayjs": "^1.11.9",
     "detect-browser": "^5.3.0",
     "flowbite": "^1.5.3",
     "is-mobile": "^3.1.1",
@@ -25,6 +28,7 @@
     "redux-persist": "^6.0.0",
     "sass": "^1.49.9",
     "socket.io-client": "^4.4.1",
+    "styled-components": "^5.3.11",
     "ua-parser-js": "^1.0.32",
     "yup": "^0.32.11"
   },
